// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots components/Tags/Tag as badge 1`] = `
<span
  className="euiBadge emotion-euiBadge"
  style={
    Object {
      "backgroundColor": "#666666",
      "color": "#FFF",
    }
  }
>
  <span
    className="euiBadge__content emotion-euiBadge__content"
  >
    <span
      className="euiBadge__text emotion-euiBadge__text"
    >
      tag
    </span>
  </span>
</span>
`;

exports[`Storyshots components/Tags/Tag as badge with color 1`] = `
<span
  className="euiBadge emotion-euiBadge"
  style={
    Object {
      "backgroundColor": "#327b53",
      "color": "#FFF",
    }
  }
>
  <span
    className="euiBadge__content emotion-euiBadge__content"
  >
    <span
      className="euiBadge__text emotion-euiBadge__text"
    >
      tag
    </span>
  </span>
</span>
`;

exports[`Storyshots components/Tags/Tag as health 1`] = `
<div
  className="euiHealth emotion-euiHealth-s"
>
  <div
    className="euiFlexGroup euiFlexGroup--gutterExtraSmall euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow"
  >
    <div
      className="euiFlexItem euiFlexItem--flexGrowZero"
    >
      <span
        color="#666666"
        data-euiicon-type="dot"
      >
        
      </span>
    </div>
    <div
      className="euiFlexItem euiFlexItem--flexGrowZero"
    >
      tag
    </div>
  </div>
</div>
`;

exports[`Storyshots components/Tags/Tag as health with color 1`] = `
<div
  className="euiHealth emotion-euiHealth-s"
>
  <div
    className="euiFlexGroup euiFlexGroup--gutterExtraSmall euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow"
  >
    <div
      className="euiFlexItem euiFlexItem--flexGrowZero"
    >
      <span
        color="#9b3067"
        data-euiicon-type="dot"
      >
        
      </span>
    </div>
    <div
      className="euiFlexItem euiFlexItem--flexGrowZero"
    >
      tag
    </div>
  </div>
</div>
`;
